creditcard-service/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: creditcard-service
  namespace: services
  labels:
    app: creditcard-service
spec:
  selector:
    app: creditcard-service
  ports:
    - name: http
      port: 8081
      targetPort: 8081
  type: ClusterIP  # internal-only, exposed via Ingress
