creditcard-service/kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: creditcard-service-ingress
spec:
  rules:
    - host: creditcard-service.local.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: creditcard-service
                port:
                  number: 8081
